fixed white space on the right side problem. add ed css to base.scss file

--- a/css/style.css
+++ b/css/style.css
@@ -51,12 +51,18 @@ ORDER: Base + typography > general layout + grid > page layout > components
   box-sizing: inherit; }
 
 html {
-  font-size: 62.5%; }
+  font-size: 62.5%;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden; }
   @media only screen and (max-width: 56.25em) {
     html {
-      font-size: 45%; } }
+      font-size: 50%; } }
 
 body {
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
   box-sizing: border-box; }
 
 body {
@@ -372,6 +378,9 @@ body {
         width: 100% !important; } }
   .row .col-1-of-2 {
     width: calc((100% - 6rem) / 2); }
+    @media only screen and (max-width: 56.25em) {
+      .row .col-1-of-2 {
+        text-align: center; } }
   .row .col-1-of-3 {
     width: calc((100% - 2 * 6rem) / 3); }
   .row .col-2-of-3 {
