--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -9,7 +9,9 @@
 html {
     // This defines what 1rem is
     font-size: 62.5%;
-
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
     @include respond(tab-port) {
         font-size: 50%;
     }
@@ -18,5 +20,8 @@ html {
 }
 
 body {
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
     box-sizing: border-box;
 }
