--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -42,7 +42,9 @@
 
     .col-1-of-2 {
         width: calc((100% - #{$gutter-horizontal}) / 2);
-
+        @include respond(tab-port) {
+            text-align: center;
+        }
 
         
     }
